modifica elenco puntato PdP

--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_5.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_5.tex
@@ -19,14 +19,14 @@
 \section{Introduzione}
 	\subsection{Scopo del documento}.
 
-	Il presente documento illustra la pianificazione adottata dal gruppo \hx{} finalizzata alla produzione del progetto \proj{}. In esso vi sono contenuti:
-\begin{itemize}
-	\item Scelta del modello di sviluppo adottato;
-	\item Analisi e trattamento dei rischi;
-	\item Pianificazione delle attività;
-	\item Preventivo delle risorse necessarie per lo svolgimento del progetto;
-           \item Consuntivo di periodo.
-\end{itemize}
+	Il presente documento illustra la pianificazione adottata dal gruppo \hx{} finalizzata alla produzione del progetto \proj{}. Esso è suddiviso nelle seguenti sezioni:
+\begin{description}
+	\item[sezione \ref{sec:modello}] Scelta del modello di sviluppo adottato;
+	\item[sezione \ref{sec:analisi}] Analisi e trattamento dei rischi;
+	\item[sezione \ref{sec:pianificazione}] Pianificazione delle attività;
+	\item[sezione \ref{sec:preventivo}] Preventivo delle risorse necessarie per lo svolgimento del progetto;
+           \item[sezione \ref{sec:consuntivo}] Consuntivo di periodo.
+\end{description}
 
 	\subsection{Scopo del prodotto}
 	\scopo{}
@@ -35,37 +35,32 @@
 	\presgloss{}
 	\subsection{Riferimenti}
 		\subsubsection{Normativi}
-		\begin{itemize}
+		\begin{description}
 			\item \emph{\NdP};
-			\item \textbf{Capitolato d'appalto C6: \proj}:
-			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6p.pdf};
-			\item \textbf{Regolamento del progetto didattico}:
-			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Dispense/L09.pdf};
-			\item \textbf{Vincoli di organigramma e dettagli tecnico-economici}:
-			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/PD01b.html}.
-			\
-		\end{itemize}
+			\item[Capitolato d'appalto C6: \proj]\url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6p.pdf};
+			\item[Regolamento del progetto didattico]\url{http://www.math.unipd.it/~tullio/IS-1/2016/Dispense/L09.pdf};
+			\item[Vincoli di organigramma e dettagli tecnico-economici]\url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/PD01b.html}.
+		\end{description}
 		\subsubsection{Informativi}
-		\begin{itemize}
-			\item \textbf{Slides del corso di Ingegneria del Software}:
-			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/};
-			\item \textbf{Ingegneria del Software - Ian Sommerville - Ottava Edizione}:
-			\begin{enumerate}
+		\begin{description}
+			\item[Slides del corso di Ingegneria del Software]\url{http://www.math.unipd.it/~tullio/IS-1/2016/};
+			\item[Ingegneria del Software - Ian Sommerville - Ottava Edizione]
+			\begin{itemize}
 				\item Capitolo 4: Software Processes;
-			\end{enumerate}
-		\end{itemize}
+			\end{itemize}
+		\end{description}
 
 	\subsection{Scadenze}
 	Il gruppo \hx{} ha deciso di rispettare le seguenti scadenze:
-		\begin{itemize}
-			\item \textbf{Revisione dei Requisiti}: 24-01-2017;
-			\item \textbf{Revisione di Progettazione}: 13-03-2017 presentandosi con Revisione di Progettazione minima;
-			\item \textbf{Revisione di Qualifica}: 18-04-2017;
-			\item \textbf{Revisione di Accettazione}: 15-05-2017.
-		\end{itemize}
+		\begin{description}
+			\item[Revisione dei Requisiti] 24-01-2017;
+			\item[Revisione di Progettazione] 13-03-2017 presentandosi con Revisione di Progettazione minima;
+			\item[Revisione di Qualifica] 18-04-2017;
+			\item[Revisione di Accettazione] 15-05-2017.
+		\end{description}
 
 
-\section{Modello di sviluppo}
+\section{Modello di sviluppo} \label{sec:modello}
 
 	La scelta di un modello di sviluppo è cruciale per la corretta pianificazione delle attività. Da essa infatti si deriva tutta la struttura principale con cui saranno pianificati milestone e task.
 
@@ -170,207 +165,205 @@ L'approccio sfrutta una metodologia fortemente \emph{risk-driven} che, malgrado 
 
 
 
-\section{Analisi dei rischi}
+\section{Analisi dei rischi} \label{sec:analisi}
 In questa sezione del documento vengono elencati e descritti tutti i possibili rischi che potrebbero colpire il gruppo \hx{} nella realizzazione del prodotto \proj. Per gestire i rischi è stata attuata la seguente procedura che prevede:
-\begin{itemize}
-	\item \textbf{Identificazione dei rischi}: trovare i rischi potenziali che si possono presentare durante l'intero sviluppo del progetto e studiarne la natura. Tali rischi possono essere di tre tipologie:
-	\begin{enumerate}
-		\item \textbf{Progetto}: relativi a pianificazione, strumenti e risorse;
-		\item \textbf{Prodotto}: relativi a conformità e aspettative del committente;
-		\item \textbf{Business}: relativi a costi e concorrenza.
-	\end{enumerate}
-	\item \textbf{Analisi dei rischi}: studiare per ogni rischio le:
-	\begin{enumerate}
-		\item \textbf{Probabilità di occorrenza};
-		\item \textbf{Conseguenze}: comprendere che peso hanno sul progetto per comprenderne le criticità.
-	\end{enumerate}
-	\item \textbf{Pianificazione di controllo e mitigazione}: istituire metodi di controllo per i rischi, così da poterli evitare facendo:
-	\begin{enumerate}
-		\item \textbf{Verifica costante del livello di rischio};
-		\item \textbf{Riconoscimento e trattamento}.
-	\end{enumerate}
-	\item \textbf{Attuazione nel periodo}: viene progressivamente descritto se il rischio si è verificato e in tal caso, in che modo il gruppo ha reagito e cosa ha comportato.
-\end{itemize}
+\begin{description}
+	\item[Identificazione dei rischi] trovare i rischi potenziali che si possono presentare durante l'intero sviluppo del progetto e studiarne la natura. Tali rischi possono essere di tre tipologie:
+	\begin{description}
+		\item[Progetto] relativi a pianificazione, strumenti e risorse;
+		\item[Prodotto] relativi a conformità e aspettative del committente;
+		\item[Business] relativi a costi e concorrenza.
+	\end{description}
+	\item[Analisi dei rischi] studiare per ogni rischio le:
+	\begin{description}
+		\item[Probabilità di occorrenza];
+		\item[Conseguenze] comprendere che peso hanno sul progetto per comprenderne le criticità.
+	\end{description}
+	\item[Pianificazione di controllo e mitigazione] istituire metodi di controllo per i rischi, così da poterli evitare facendo:
+	\begin{description}
+		\item[Verifica costante del livello di rischio];
+		\item[Riconoscimento e trattamento].
+	\end{description}
+	\item[Attuazione nel periodo] viene progressivamente descritto se il rischio si è verificato e in tal caso, in che modo il gruppo ha reagito e cosa ha comportato.
+\end{description}
 Ciascun rischio viene identificato a:
-\begin{itemize}
-	\item \textbf{Livello tecnologico};
-	\item \textbf{Livello del personale};
-	\item \textbf{Livello organizzativo};
-	\item \textbf{Livello dei requisiti};
-	\item \textbf{Livello di valutazione dei costi}.
-\end{itemize}
+\begin{description}
+	\item[Livello tecnologico](sezione \ref{sec:tec});
+	\item[Livello del personale](sezione \ref{sec:per});
+	\item[Livello organizzativo](sezione \ref{sec:org});
+	\item[Livello dei requisiti](sezione \ref{sec:req});
+	\item[Livello di valutazione dei costi](sezione \ref{sec:val}).
+\end{description}
 Per ogni rischio viene fornito un elenco di informazioni, necessario per comprenderne la natura. Esso comprende:
-\begin{itemize}
-	\item \textbf{Nome};
-	\item \textbf{Descrizione};
-	\item \textbf{Probabilità di occorrenza};
-	\item \textbf{Grado di pericolosità};
-	\item \textbf{Riconoscimento};
-	\item \textbf{Trattamento};
-	\item \textbf{Attuazione nel periodo}.
-\end{itemize}
-	\subsection{Livello tecnologico}
+\begin{description}
+	\item[Nome];
+	\item[Descrizione];
+	\item[Probabilità di occorrenza];
+	\item[Grado di pericolosità];
+	\item[Riconoscimento];
+	\item[Trattamento];
+	\item[Attuazione nel periodo].
+\end{description}
+	\subsection{Livello tecnologico} \label{sec:tec}
 		\subsubsection{Tecnologie adottate}
-		\begin{itemize}
-			\item \textbf{Descrizione}: le tecnologie adottate per sviluppare il prodotto sono solamente in parte note ai componenti del gruppo e ciò non toglie che vi possano essere delle mancanze;
-			\item \textbf{Probabilità di occorrenza}: media;
-			\item \textbf{Grado di pericolosità}: alto;
-			\item \textbf{Riconoscimento}: il \emph{Responsabile} ha il compito di verificare il grado di conoscenza e preparazione di ciascun componente relativo alle tecnologie adottate;
-			\item \textbf{Trattamento}: ciascun componente si impegnerà a documentarsi in maniera autonoma sulle tecnologie adottate;
-			\item \textbf{Attuazione nel periodo}:
-			\begin{itemize}
-				\item \textbf{Analisi dei requisiti}: il rischio non si è ancora verificato dato che non sono state usate tali tecnologie in questo periodo di sviluppo.
-			\end{itemize}
-		\end{itemize}
+		\begin{description}
+			\item[Descrizione] le tecnologie adottate per sviluppare il prodotto sono solamente in parte note ai componenti del gruppo e ciò non toglie che vi possano essere delle mancanze;
+			\item[Probabilità di occorrenza] media;
+			\item[Grado di pericolosità] alto;
+			\item[Riconoscimento] il \emph{Responsabile} ha il compito di verificare il grado di conoscenza e preparazione di ciascun componente relativo alle tecnologie adottate;
+			\item[Trattamento] ciascun componente si impegnerà a documentarsi in maniera autonoma sulle tecnologie adottate;
+			\item[Attuazione nel periodo]
+			\begin{description}
+				\item[Analisi dei requisiti] il rischio non si è ancora verificato dato che non sono state usate tali tecnologie in questo periodo di sviluppo.
+			\end{description}
+		\end{description}
 		\subsubsection{Rotture Hardware}
-		\begin{itemize}
-			\item \textbf{Descrizione}: la strumentazione usata dal gruppo quale computer portatili, può essere soggetta a rotture e malfunzionamenti durante lo sviluppo del progetto. Un altro rischio di fallibilità hardware è quello del \gloss{server} usato per ospitare 				\gloss{PragmaDB}, un malfunzionamento su tale macchina o sui pc dei membri del gruppo mette a rischio il lavoro dell'intero \gloss{team}, rendendo così più difficile l'avanzamento;
-			\item \textbf{Probabilità di occorrenza}: bassa;
-			\item \textbf{Grado di pericolosità}: medio;
-			\item \textbf{Riconoscimento}: ogni membro del team avrà cura dei propri strumenti hardware verificandone giornalmente il completo funzionamento;
-			\item \textbf{Trattamento}: prima di qualunque spostamento, è obbligatorio scaricare sul \gloss{server} \gloss{GitHub} i file modificati. Se ciò non fosse possibile ma per assenza di collegamento ad Internet, è obbligatorio copiare i propri avanzamenti su almeno un dispositivo di memoria esterno secondario. Per il \gloss{server} che ospita \gloss{PragmaDB}, è previsto un sistema di \gloss{backup} automatico e in caso di malfunzionamenti sarà compito dell’\emph{Amministratore} riportare tale macchina in uno stato funzionante nel minor tempo possibile; 
-			\item \textbf{Attuazione nel periodo}:
-			\begin{itemize}
-				\item \textbf{Analisi dei requisiti}: il rischio non si è mai verificato.
-			\end{itemize}
-		\end{itemize}
-	\subsection{Livello del personale}
+		\begin{description}
+			\item[Descrizione] la strumentazione usata dal gruppo quale computer portatili, può essere soggetta a rotture e malfunzionamenti durante lo sviluppo del progetto. Un altro rischio di fallibilità hardware è quello del \gloss{server} usato per ospitare 				\gloss{PragmaDB}, un malfunzionamento su tale macchina o sui pc dei membri del gruppo mette a rischio il lavoro dell'intero \gloss{team}, rendendo così più difficile l'avanzamento;
+			\item[Probabilità di occorrenza] bassa;
+			\item[Grado di pericolosità] medio;
+			\item[Riconoscimento] ogni membro del team avrà cura dei propri strumenti hardware verificandone giornalmente il completo funzionamento;
+			\item[Trattamento] prima di qualunque spostamento, è obbligatorio scaricare sul \gloss{server} \gloss{GitHub} i file modificati. Se ciò non fosse possibile ma per assenza di collegamento ad Internet, è obbligatorio copiare i propri avanzamenti su almeno un dispositivo di memoria esterno secondario. Per il \gloss{server} che ospita \gloss{PragmaDB}, è previsto un sistema di \gloss{backup} automatico e in caso di malfunzionamenti sarà compito dell’\emph{Amministratore} riportare tale macchina in uno stato funzionante nel minor tempo possibile; 
+			\item[Attuazione nel periodo]
+			\begin{description}
+				\item[Analisi dei requisiti] il rischio non si è mai verificato.
+			\end{description}
+		\end{description}
+	\subsection{Livello del personale} \label{sec:per}
 		\subsubsection{Problemi tra componenti del team}
-		\begin{itemize}
-			\item \textbf{Descrizione}: i componenti del gruppo sono alle prime esperienze nello sviluppo di progetti dove il numero di partecipanti è alto. Tale fattore potrebbe causare problemi quali incomprensioni tra i membri del gruppo e dissidi generando quindi un clima non proficuo;
-			\item \textbf{Probabilità di occorrenza}: bassa;
-			\item \textbf{Grado di pericolosità}: alto;
-			\item \textbf{Riconoscimento}: il \emph{Responsabile} deve monitorare lo stato di collaborazione fra i vari componenti del gruppo durante le varie fasi e capire dove stia nascendo un dissidio fra uno o più membri;
-			\item \textbf{Trattamento}: il \emph{Responsabile} provvederà, in caso di contrasti tra membri del gruppo, ad affidare alle persone coinvolte attività che non li faccia collaborare assieme, cercando di riportare sempre la sintonia all'interno del gruppo per avere un ambiente di lavoro il meno stressante possibile;
-			\item \textbf{Attuazione nel periodo}:
-			\begin{itemize}
-				\item \textbf{Analisi dei requisiti}: il rischio non si è mai verificato.
-			\end{itemize}
-		\end{itemize}
+		\begin{description}
+			\item[Descrizione] i componenti del gruppo sono alle prime esperienze nello sviluppo di progetti dove il numero di partecipanti è alto. Tale fattore potrebbe causare problemi quali incomprensioni tra i membri del gruppo e dissidi generando quindi un clima non proficuo;
+			\item[Probabilità di occorrenza] bassa;
+			\item[Grado di pericolosità] alto;
+			\item[Riconoscimento] il \emph{Responsabile} deve monitorare lo stato di collaborazione fra i vari componenti del gruppo durante le varie fasi e capire dove stia nascendo un dissidio fra uno o più membri;
+			\item[Trattamento] il \emph{Responsabile} provvederà, in caso di contrasti tra membri del gruppo, ad affidare alle persone coinvolte attività che non li faccia collaborare assieme, cercando di riportare sempre la sintonia all'interno del gruppo per avere un ambiente di lavoro il meno stressante possibile;
+			\item[Attuazione nel periodo]
+			\begin{description}
+				\item[Analisi dei requisiti] il rischio non si è mai verificato.
+			\end{description}
+		\end{description}
 		\subsubsection{Problemi personali dei componenti del team}
-		\begin{itemize}
-			\item \textbf{Descrizione}: ciascun componente del gruppo ha impegni personali e necessità proprie. Questo implica la possibilità che qualche componente del \gloss{team} non sia disponibile in certi momenti.
-			\item \textbf{Probabilità di occorrenza}: media;
-			\item \textbf{Grado di pericolosità}: medio;
-			\item \textbf{Riconoscimento}: per creare un calendario sincronizzato e condiviso del gruppo, è necessario che vengano notificati al \emph{Responsabile} in maniera preventiva e tempestiva gli impegni di ognuno;
-			\item \textbf{Trattamento}: ad ogni impegno notificato, il \emph{Responsabile} si prenderà la responsabilità di eseguire una nuova parte di pianificazione del periodo problematico; 
-			\item \textbf{Attuazione nel periodo}:
-			\begin{itemize}
-				\item \textbf{Analisi dei requisiti}: il rischio si è verificato un paio di volte a due membri del gruppo per problemi personali; nonostante ciò, il lavoro è stato portato al termine e non ci sono stati rallentamenti.
-			\end{itemize}
-		\end{itemize}
+		\begin{description}
+			\item[Descrizione] ciascun componente del gruppo ha impegni personali e necessità proprie. Questo implica la possibilità che qualche componente del \gloss{team} non sia disponibile in certi momenti.
+			\item[Probabilità di occorrenza] media;
+			\item[Grado di pericolosità] medio;
+			\item[Riconoscimento] per creare un calendario sincronizzato e condiviso del gruppo, è necessario che vengano notificati al \emph{Responsabile} in maniera preventiva e tempestiva gli impegni di ognuno;
+			\item[Trattamento] ad ogni impegno notificato, il \emph{Responsabile} si prenderà la responsabilità di eseguire una nuova parte di pianificazione del periodo problematico; 
+			\item[Attuazione nel periodo]
+			\begin{description}
+				\item[Analisi dei requisiti] il rischio si è verificato un paio di volte a due membri del gruppo per problemi personali; nonostante ciò, il lavoro è stato portato al termine e non ci sono stati rallentamenti.
+			\end{description}
+		\end{description}
 		\subsubsection{Problemi di inesperienza}
-		\begin{itemize}
-			\item \textbf{Descrizione}: l'approccio al metodo di lavoro risulta nuovo e sono richieste capacità di pianificazione e di analisi che il gruppo non possiede a causa dell'inesperienza. Inoltre, alcune conoscenze richieste richiedono tempo per poter essere apprese;
-			\item \textbf{Probabilità di occorrenza}: alta;
-			\item \textbf{Grado di pericolosità}: alto;
-			\item \textbf{Riconoscimento}: quando un componente del gruppo ritiene opportuno utilizzare una nuova tecnologia, deve segnalarlo al \emph{Responsabile} che, una volta approvatone l'utilizzo nel progetto, demanderà al gruppo il compito di documentarsi su come 	impiegarlo al meglio;
-			\item \textbf{Trattamento}: ogni membro del gruppo si impegna a studiare il materiale necessario per l'utilizzo di tecnologie e strumenti richiesti durante lo svolgimento del progetto. Nel caso in cui questo non fosse sufficiente, il \emph{Responsabile} dovrà preparare un piano di studi per compensare ogni tipo di lacuna;
-			\item \textbf{Attuazione nel periodo}:
-			\begin{itemize}
-				\item \textbf{Analisi dei requisiti}:  il rischio si è verificato soprattutto nella prima fase.
-			\end{itemize}
-		\end{itemize}
-	\subsection{Livello organizzativo}
+		\begin{description}
+			\item[Descrizione] l'approccio al metodo di lavoro risulta nuovo e sono richieste capacità di pianificazione e di analisi che il gruppo non possiede a causa dell'inesperienza. Inoltre, alcune conoscenze richieste richiedono tempo per poter essere apprese;
+			\item[Probabilità di occorrenza] alta;
+			\item[Grado di pericolosità] alto;
+			\item[Riconoscimento] quando un componente del gruppo ritiene opportuno utilizzare una nuova tecnologia, deve segnalarlo al \emph{Responsabile} che, una volta approvatone l'utilizzo nel progetto, demanderà al gruppo il compito di documentarsi su come 	impiegarlo al meglio;
+			\item[Trattamento] ogni membro del gruppo si impegna a studiare il materiale necessario per l'utilizzo di tecnologie e strumenti richiesti durante lo svolgimento del progetto. Nel caso in cui questo non fosse sufficiente, il \emph{Responsabile} dovrà preparare un piano di studi per compensare ogni tipo di lacuna;
+			\item[Attuazione nel periodo]
+			\begin{description}
+				\item[Analisi dei requisiti]  il rischio si è verificato soprattutto nella prima fase.
+			\end{description}
+		\end{description}
+	\subsection{Livello organizzativo} \label{sec:org}
 		\subsubsection{Pianificazione Errata}
-		\begin{itemize}
-			\item \textbf{Descrizione}: durante la pianificazione è possibile che, a causa di assunzioni sbagliate, i tempi per l'esecuzione di alcune attività vengano calcolati in modo errato. Ciò potrebbe portare ad avere dei periodi di inattività o di sovraccarico di lavoro del \gloss{team};
-			\item \textbf{Probabilità di occorrenza}: media;
-			\item \textbf{Grado di pericolosità}: alto;
-			\item \textbf{Riconoscimento}: la caratteristica dinamica del rischio impone che si debba controllare lo stato delle attività nel programma di \emph{project management} periodicamente, in modo da verificare eventuali ritardi nello sviluppo delle attività; 
-			\item \textbf{Trattamento}: si è deciso di prevedere per ogni attività, un periodo maggiore di quanto normalmente richiesto e una fase di verifica ogni venerdì della settimana interessata per poter correggere, dove possibile, gli eventuali errori il sabato stesso; in tale maniera, un eventuale ritardo non influenzerà la durata totale del progetto; 
-			\item \textbf{Attuazione nel periodo}:
-			\begin{itemize}
-				\item \textbf{Analisi dei requisiti}:  il rischio non si è mai verificato.
-			\end{itemize}
-		\end{itemize}
-	\subsection{Livello dei requisiti}
+		\begin{description}
+			\item[Descrizione] durante la pianificazione è possibile che, a causa di assunzioni sbagliate, i tempi per l'esecuzione di alcune attività vengano calcolati in modo errato. Ciò potrebbe portare ad avere dei periodi di inattività o di sovraccarico di lavoro del \gloss{team};
+			\item[Probabilità di occorrenza] media;
+			\item[Grado di pericolosità] alto;
+			\item[Riconoscimento] la caratteristica dinamica del rischio impone che si debba controllare lo stato delle attività nel programma di \emph{project management} periodicamente, in modo da verificare eventuali ritardi nello sviluppo delle attività; 
+			\item[Trattamento] si è deciso di prevedere per ogni attività, un periodo maggiore di quanto normalmente richiesto e una fase di verifica ogni venerdì della settimana interessata per poter correggere, dove possibile, gli eventuali errori il sabato stesso; in tale maniera, un eventuale ritardo non influenzerà la durata totale del progetto; 
+			\item[Attuazione nel periodo]
+			\begin{description}
+				\item[Analisi dei requisiti]  il rischio non si è mai verificato.
+			\end{description}
+		\end{description}
+	\subsection{Livello dei requisiti} \label{sec:req}
 		\subsubsection{Incomprensioni e scelte non congrue}
-		\begin{itemize}
-			\item \textbf{Descrizione}: durante la fase di analisi del capitolato, è possibile che il problema e i suoi requisiti non vengano capiti in toto, fraintesi o tralasciati dagli \emph{Analisti}. Questo può provocare delle divergenze tra le aspettative del proponente e la visione del gruppo sul prodotto;
-			\item \textbf{Probabilità di occorrenza}: media;
-			\item \textbf{Grado di pericolosità}: alto;
-			\item \textbf{Riconoscimento}: si ritiene un'ottima strategia di controllo, l'incontro con il proponente stesso per poter discutere dei requisiti identificati, in modo da assicurare la totale concordanza sulle necessità del prodotto;
-			\item \textbf{Trattamento}: sarà necessario effettuare degli incontri con il proponente in modo da poter definire con chiarezza ogni requisito necessario al corretto sviluppo del progetto. Inoltre, sarà importante correggere tempestivamente ogni errore e imprecisione che il committente individuerà alle revisioni. 
-			\item \textbf{Attuazione nel periodo}:
-			\begin{itemize}
-				\item \textbf{Analisi dei requisiti}:  il rischio si è verificato durante il secondo incontro, facendo emergere dei nuovi requisiti fondamentali non evidenziati nel capitolato.
-			\end{itemize}
-		\end{itemize}
-	\subsection{Livello della valutazione dei costi}
+		\begin{description}
+			\item[Descrizione] durante la fase di analisi del capitolato, è possibile che il problema e i suoi requisiti non vengano capiti in toto, fraintesi o tralasciati dagli \emph{Analisti}. Questo può provocare delle divergenze tra le aspettative del proponente e la visione del gruppo sul prodotto;
+			\item[Probabilità di occorrenza] media;
+			\item[Grado di pericolosità] alto;
+			\item[Riconoscimento] si ritiene un'ottima strategia di controllo, l'incontro con il proponente stesso per poter discutere dei requisiti identificati, in modo da assicurare la totale concordanza sulle necessità del prodotto;
+			\item[Trattamento] sarà necessario effettuare degli incontri con il proponente in modo da poter definire con chiarezza ogni requisito necessario al corretto sviluppo del progetto. Inoltre, sarà importante correggere tempestivamente ogni errore e imprecisione che il committente individuerà alle revisioni. 
+			\item[Attuazione nel periodo]
+			\begin{description}
+				\item[Analisi dei requisiti]  il rischio si è verificato durante il secondo incontro, facendo emergere dei nuovi requisiti fondamentali non evidenziati nel capitolato.
+			\end{description}
+		\end{description}
+	\subsection{Livello della valutazione dei costi} \label{sec:val}
 		\subsubsection{Errore nelle previsioni}
-		\begin{itemize}
-			\item \textbf{Descrizione}: è possibile che i tempi delle attività pianificate per lo svolgimento del progetto siano sovrastimate o sottostimate. Un valutazione errata di queste, può comportare una variazione sul costo preventivo presentato; 
-			\item \textbf{Probabilità di occorrenza}: media;
-			\item \textbf{Grado di pericolosità}: medio;
-			\item \textbf{Riconoscimento}: quando un'attività occupa più tempo di quello previsto significa che è stata sottostimata. Viceversa, quando invece ne occupa considerevolmente meno, significa che è stata sovrastimata. É necessario quindi che il \emph{Responsabile} monitori con grande attenzione il programma di \emph{project management} e che faccia tempestive modiche alla pianificazione e al rendiconto dei costi; 
-			\item \textbf{Trattamento}: è necessario che ogni membro del gruppo rispetti i tempi delle attività assegnatogli; 
-			\item \textbf{Attuazione nel periodo}:
-			\begin{itemize}
-				\item \textbf{Analisi dei requisiti}:  il rischio non si è mai verificato.
-			\end{itemize}
-		\end{itemize}
-\section{Pianificazione delle Attività}
+		\begin{description}
+			\item[Descrizione] è possibile che i tempi delle attività pianificate per lo svolgimento del progetto siano sovrastimate o sottostimate. Un valutazione errata di queste, può comportare una variazione sul costo preventivo presentato; 
+			\item[Probabilità di occorrenza] media;
+			\item[Grado di pericolosità] medio;
+			\item[Riconoscimento] quando un'attività occupa più tempo di quello previsto significa che è stata sottostimata. Viceversa, quando invece ne occupa considerevolmente meno, significa che è stata sovrastimata. É necessario quindi che il \emph{Responsabile} monitori con grande attenzione il programma di \emph{project management} e che faccia tempestive modiche alla pianificazione e al rendiconto dei costi; 
+			\item[Trattamento] è necessario che ogni membro del gruppo rispetti i tempi delle attività assegnatogli; 
+			\item[Attuazione nel periodo]
+			\begin{description}
+				\item[Analisi dei requisiti]  il rischio non si è mai verificato.
+			\end{description}
+		\end{description}
+\section{Pianificazione delle Attività} \label{sec:pianificazione}
 Per eseguire una più accurata pianificazione progettuale, il \gloss{team} ha deciso di suddividere il progetto nelle seguenti fasi:
-\begin{itemize}
-	\item \textbf{Analisi dei Requisiti (AR)};
-	\item \textbf{Analisi dei Requisiti Incrementale (ARI)};
-	\item \textbf{Progettazione Architetturale (PA)};
-	\item \textbf{Progettazione di Dettaglio e Codifica (PDC)};
-	\item \textbf{Verifica e Validazione (VV)}.
-\end{itemize}
+\begin{description}
+	\item[Analisi dei Requisiti](sezione \ref{sec:AR});
+	\item[Analisi dei Requisiti Incrementale](sezione \ref{sec:ARI});
+	\item[Progettazione Architetturale](sezione \ref{sec:PA});
+	\item[Progettazione di Dettaglio e Codifica](sezione \ref{sec:PDC});
+	\item[Verifica e Validazione](sezione \ref{sec:VV}).
+\end{description}
 In ognuna di queste fasi, vengono svolte attività di sviluppo del progetto che sono descritte più approfonditamente nel documento corrente.
 Inoltre, per illustrare la suddivisione delle seguenti fasi, sono riportati i \gloss{diagrammi di Gantt}:"descrizione di come sono fatti in generale 
 questi diagrami(es milestone ecc)".
 \subsection{Suddivisione delle Attività}
-	\subsubsection{Analisi dei Requisiti}
+	\subsubsection{Analisi dei Requisiti} \label{sec:AR}
 	\textbf{Periodo}: dal 29-11-2016 al 11-01-2017.
 	\\ Questo periodo inizia successivamente alla formazione del gruppo e finisce in corrispondenza della consegna dei documenti per la \emph{Revisione dei Requisiti}.
 	Questo perido prevede che vengano stilati i seguenti documenti:
-	\begin{itemize}
-		\item \textbf{Norme di Progetto}: in questo documento sono inserite tutte le norme che il \gloss{team} dovrà seguire e rispettare durante l'intero svolgimento delle attività. Tale documento è redatto dall'\emph{Amministratore}, mentre il \emph{Verificatore} ha il compito di certificare che tali norme siano state rispettate da tutto il gruppo;
-		\item \textbf{Studio di Fattibilità}: in questo documento vengono analizzati i vari capitolati proposti. Per ogni capitolato, è stato analizzato il dominio applicativo/tecnologico e sono state inserite delle considerazioni in merito agli aspetti positivi e negativi;
-		\item \textbf{Analisi dei Requisiti}: in questo documento sono raccolti tutti i requisiti progettuali necessari per comprendere più approfonditamente	il capitolato scelto con lo \emph{Studio di Fattibilità};
-		\item \textbf{Piano di Progetto}: questo documento è redatto dal \emph{Responsibile di Progetto} che organizza tutte le attività e stima le risorse, costi e tempi necessari per lo svolgimento del progetto;
-		\item \textbf{Piano di Qualifica}: questo documento è redatto dal \emph{Verificatore} che individua tutte le strategie di verifica e validazione che il \gloss{team} deve adottare per il progetto per ottenere e consegnare un prodotto di qualità;
-		\item \textbf{Glossario}: questo documento viene steso da tutti i redattori in parallelo alla stesura degli altri documenti; esso contiene la spiegazione di alcuni termini presenti nei vari documenti al fine di chiarire il significato del termine stesso;
-		\item \textbf{Lettera di presentazione}: questo documento viene presentato al committente al fine di mostrare l'interesse del gruppo di partecipare alla gara d'appalto.
-	\end{itemize}
+	\begin{description}
+		\item[Norme di Progetto] in questo documento sono inserite tutte le norme che il \gloss{team} dovrà seguire e rispettare durante l'intero svolgimento delle attività. Tale documento è redatto dall'\emph{Amministratore}, mentre il \emph{Verificatore} ha il compito di certificare che tali norme siano state rispettate da tutto il gruppo;
+		\item[Studio di Fattibilità] in questo documento vengono analizzati i vari capitolati proposti. Per ogni capitolato, è stato analizzato il dominio applicativo/tecnologico e sono state inserite delle considerazioni in merito agli aspetti positivi e negativi;
+		\item[Analisi dei requisiti] in questo documento sono raccolti tutti i requisiti progettuali necessari per comprendere più approfonditamente	il capitolato scelto con lo \emph{Studio di Fattibilità};
+		\item[Piano di Progetto] questo documento è redatto dal \emph{Responsibile di Progetto} che organizza tutte le attività e stima le risorse, costi e tempi necessari per lo svolgimento del progetto;
+		\item[Piano di Qualifica] questo documento è redatto dal \emph{Verificatore} che individua tutte le strategie di verifica e validazione che il \gloss{team} deve adottare per il progetto per ottenere e consegnare un prodotto di qualità;
+		\item[Glossario] questo documento viene steso da tutti i redattori in parallelo alla stesura degli altri documenti; esso contiene la spiegazione di alcuni termini presenti nei vari documenti al fine di chiarire il significato del termine stesso;
+		\item[Lettera di presentazione] questo documento viene presentato al committente al fine di mostrare l'interesse del gruppo di partecipare alla gara d'appalto.
+	\end{description}
 	[Gantt eccetera]
-	\subsubsection{Analisi dei Requisiti Incrementale}
+	\subsubsection{Analisi dei Requisiti Incrementale} \label{sec:ARI}
 	\textbf{Periodo}: dal 24-01-2017 al 03-02-2017.
 	\\ Questo periodo inizia in concomitanza con la \emph{Revisione dei Requisiti} e termina con una \gloss{milestone} interna che corrisponde all'inizio della \emph{Progettazione Architetturale}. In questo periodo, il gruppo mira ad integrare la documentazione precedentemente prodotta (in modo particolare l'\emph{Analisi dei Requisiti}), con le correzioni suggerite durante la \emph{Revisione dei Requisiti}.
 	[Gantt eccetera]
-	\subsubsection{Progettazione Architetturale}
+	\subsubsection{Progettazione Architetturale} \label{sec:PA}
 	\textbf{Periodo}: dal 03-02-2017 al 06-03-2017.	
 	\\ Questo periodo inizia subito dopo \emph{Analisi dei Requisiti Incrementale} e si conclude con la consegna dei documenti per la \emph{Revisione di Progettazione}. La \emph{Progettazione Architetturale} prevede la stesura della progettazione ad alto  livello e predeve lo svolgimento delle seguenti attività:
-	\begin{itemize}
-		\item \textbf{Incremento dei Documenti}: in questa attività verranno incrementati tutti i documenti della \emph{Progettazione Architetturale};
-		\item \textbf{Specifica Tecnica}: in questa attività viene stilato questo documento che descrive le scelte progettuali ad alto livello che il prodotto dovrà rispettare.
-	\end{itemize}
+	\begin{description}
+		\item[Incremento dei Documenti] in questa attività verranno incrementati tutti i documenti della \emph{Progettazione Architetturale};
+		\item[Specifica Tecnica] in questa attività viene stilato questo documento che descrive le scelte progettuali ad alto livello che il prodotto dovrà rispettare.
+	\end{description}
 	[Gantt eccetera]
-	\subsubsection{Progettazione di Dettaglio e Codifica}
+	\subsubsection{Progettazione di Dettaglio e Codifica} \label{sec:PDC}
 	\textbf{Periodo}: dal 06-03-2017 al 11-04-2017.	
 	\\ Questo perido inizia subito dopo la \emph{Progettazione Architetturale} e si conclude con la consegna dei documenti per la \emph{Revisione di Qualifica"}. La \emph{Progettazione di Dettaglio e Codifica} prevede la stesura del \emph{Definizione di Prodotto} e successivamente si inizierà con la fase di codifica. Le attività da svolgere sono le seguenti:
-	\begin{itemize}
-		\item \textbf{Incremento dei Documenti}: in questa attività verranno incrementati tutti i documenti basandosi sui risultati della \emph{Revisione di Prodotto}; 
-
-		\item \textbf{Definizione di Prodotto}: in questa attività viene stilato questo documento che contiene la struttura e la relazione tra i vari componenti del prodotto, in base a quanto riportato nel documento \emph{Specifica Tecnica};
-		
-		\item \textbf{Codifica}: in questa attività si procede allo sviluppo del codice del software da parte dei programmatori, attenendosi a quanto è riportato nella \emph{Definizione di Prodotto}; 
-		\item \textbf{Manuale Utente}: in questa attività si crea il documento destinato all'utente finale, che ha lo scopo di fornire le linee guida per il corretto utilizzo del software.
-	\end{itemize}
+	\begin{description}
+		\item[Incremento dei Documenti] in questa attività verranno incrementati tutti i documenti basandosi sui risultati della \emph{Revisione di Prodotto}; 
+		\item[Definizione di Prodotto] in questa attività viene stilato questo documento che contiene la struttura e la relazione tra i vari componenti del prodotto, in base a quanto riportato nel documento \emph{Specifica Tecnica};
+		\item[Codifica] in questa attività si procede allo sviluppo del codice del software da parte dei programmatori, attenendosi a quanto è riportato nella \emph{Definizione di Prodotto}; 
+		\item[Manuale Utente] in questa attività si crea il documento destinato all'utente finale, che ha lo scopo di fornire le linee guida per il corretto utilizzo del software.
+	\end{description}
 	[Gantt eccetera]
-	\subsubsection{Verifica e Validazione}
+	\subsubsection{Verifica e Validazione} \label{sec:VV}
 
 	\textbf{Periodo}: dal 11-04-2017 al 14-05-2017.
 	\\ Questo perido inizia subito dopo la \emph{Progettazione di Dettaglio e Codifica} e si conclude con la consegna del prodotto finale alla \emph{Revisione di Accettazione}. In questo periodo vengono effettuati i test del software, atti a garantire un prodotto finale che soddisfi i requisiti contenuti nell'\emph{Analisi dei Requisiti}. Le attività da svolgere sono:
-	\begin{itemize}
-		\item \textbf{Test}: effettuare dei test per il collaudo del sistema;
-		\item \textbf{Incremento e Verifica dei Documenti}: in questa attività verranno incrementati verificati tutti i documenti, basandosi sui risultati della \emph{Revisione di Qualifica}.
-	\end{itemize}
+	\begin{description}
+		\item[Test] effettuare dei test per il collaudo del sistema;
+		\item[Incremento e Verifica dei Documenti] in questa attività verranno incrementati verificati tutti i documenti, basandosi sui risultati della \emph{Revisione di Qualifica}.
+	\end{description}
 	[Gantt eccetera]	
-	\section{Preventivo}
-\section{Consuntivo di periodo}
+\section{Preventivo} \label{sec:preventivo}
+\section{Consuntivo di periodo} \label{sec:consuntivo}
 
 \end{document}
